# mcp-pdf

./: .env.example  .gitignore  .mcp.json  .safety-policy.json  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  Dockerfile  LICENSE  LOCAL_DEVELOPMENT.md  MANIFEST.in  MCPMIXIN_ARCHITECTURE.md  MCPMIXIN_MIGRATION_GUIDE.md  MCPMIXIN_ROADMAP.md  MCP_DOCX_TOOLS_PLAN.md  QUICKSTART.md  README.md  claude-mcp-manager  claude_desktop_config.json  docker-compose.yml  mcp-config-example.json  mcp-pdf-tools-launcher.sh  pyproject.toml  run-mcp-server.sh  test_image_extraction_fix.py  test_integration.py  test_pages_parameter.py  test_security_features.py  test_url_support.py
.github/workflows/: security.yml
docs/agent-threads/: PROTOCOL.md
docs/agent-threads/xfa-form-support/: 001-iar-forms-xfa-support.md  002-pdftools-yes-schema-and-detection.md  003-iar-attaches-prototype.md  004-pdftools-prototype-pulled-plan.md  005-iar-attaches-fixture.md  006-pdftools-shipped-v2-3-0.md
examples/: create_test_pdf.py  test_pdf_tools.py  url_examples.py  verify_installation.py
src/mcp_pdf/: security.py  server.py  server_legacy.py  server_refactored.py  xfa.py
src/mcp_pdf/mixins/: __init__.py  advanced_forms.py  annotations.py  base.py  document_analysis.py  document_assembly.py  document_processing.py  form_management.py  image_processing.py  security_analysis.py  stubs.py  table_extraction.py  text_extraction.py
src/mcp_pdf/mixins_official/: __init__.py  advanced_forms.py  annotations.py  content_analysis.py  document_analysis.py  document_assembly.py  form_management.py  image_processing.py  misc_tools.py  pdf_utilities.py  permit_forms.py  security_analysis.py  structure_detection.py  table_extraction.py  text_extraction.py  utils.py
src/mcp_pdf_tools/: __init__.py  server.py
tests/: __init__.py  test_mixin_architecture.py  test_server.py  test_xfa.py
tests/fixtures/xfa/: README.md
